--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "管理员",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json"
